--- a/public/server.html
+++ b/public/server.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>OPPER Payment Server</title>
     <style>
         * {
@@ -14,11 +14,11 @@
         body {
             background: linear-gradient(135deg, #0a192f, #1e3a8a);
             min-height: 100vh;
-            padding: 20px;
+            padding: 2vw;
             color: #e0e7ff;
-            font-size: 16px;
+            font-size: clamp(14px, 3vw, 16px);
             position: relative;
-            overflow-x: auto;
+            overflow-x: hidden;
         }
         .background-waves {
             position: fixed;
@@ -32,13 +32,14 @@
         }
         .wave {
             position: absolute;
-            bottom: -100px;
+            bottom: -10vh;
             left: 0;
             width: 100%;
-            height: 100px;
+            height: 10vh;
             background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1200 120" preserveAspectRatio="none"><path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0v27.35a600.21,600.21,0,0,0,321.39,29.09Z" fill="rgba(59,130,246,0.3)"/></svg>');
             background-size: cover;
             animation: wave 10s linear infinite;
+            will-change: transform;
         }
         .wave:nth-child(2) {
             background: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1200 120" preserveAspectRatio="none"><path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0v27.35a600.21,600.21,0,0,0,321.39,29.09Z" fill="rgba(147,197,253,0.2)"/></svg>');
@@ -46,7 +47,7 @@
         }
         @keyframes wave {
             0% { transform: translateX(0); }
-            100% { transform: translateX(1200px); }
+            100% { transform: translateX(100vw); }
         }
         .login-container {
             position: fixed;
@@ -62,30 +63,30 @@
         }
         .login-box {
             background: rgba(255, 255, 255, 0.05);
-            padding: 30px;
+            padding: clamp(20px, 5vw, 25px);
             border-radius: 15px;
             box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
             backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.15);
-            width: 100%;
+            width: 90%;
             max-width: 400px;
             text-align: center;
         }
         .login-box h2 {
             color: #60a5fa;
-            margin-bottom: 20px;
-            font-size: 1.8rem;
+            margin-bottom: 3vh;
+            font-size: clamp(1.5rem, 5vw, 1.8rem);
             font-weight: 700;
         }
         .login-box input {
             width: 100%;
-            padding: 12px;
-            margin: 10px 0;
+            padding: clamp(10px, 3vw, 12px);
+            margin: 2vh 0;
             border: 1px solid #60a5fa;
             border-radius: 10px;
             background: rgba(255, 255, 255, 0.08);
             color: #e0e7ff;
-            font-size: 1rem;
+            font-size: clamp(0.9rem, 2.5vw, 1rem);
             outline: none;
             transition: all 0.3s ease;
         }
@@ -95,18 +96,19 @@
         }
         .login-box button {
             width: 100%;
-            padding: 12px;
+            padding: clamp(10px, 3vw, 12px);
             background: linear-gradient(135deg, #3b82f6, #60a5fa);
             border: none;
             border-radius: 10px;
             color: #fff;
             font-weight: 700;
-            font-size: 1rem;
+            font-size: clamp(0.9rem, 2.5vw, 1rem);
             cursor: pointer;
             position: relative;
             overflow: hidden;
             transition: all 0.4s ease;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+            touch-action: manipulation;
         }
         .login-box button::before {
             content: '';
@@ -128,13 +130,13 @@
         }
         .login-box .error-message {
             color: #f87171;
-            font-size: 0.9rem;
-            margin-top: 10px;
+            font-size: clamp(0.8rem, 2.2vw, 0.9rem);
+            margin-top: 2vh;
         }
         .login-box .success-message {
             color: #4ade80;
-            font-size: 0.9rem;
-            margin-top: 10px;
+            font-size: clamp(0.8rem, 2.2vw, 0.9rem);
+            margin-top: 2vh;
         }
         .hidden {
             display: none;
@@ -142,8 +144,8 @@
         h1 {
             text-align: center;
             color: #60a5fa;
-            margin-bottom: 25px;
-            font-size: 2.2rem;
+            margin-bottom: 4vh;
+            font-size: clamp(1.8rem, 6vw, 2.2rem);
             font-weight: 700;
             text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
             position: relative;
@@ -151,35 +153,37 @@
         h1::after {
             content: '';
             position: absolute;
-            bottom: -10px;
+            bottom: -1.5vh;
             left: 50%;
             transform: translateX(-50%);
-            width: 60px;
+            width: clamp(50px, 15vw, 60px);
             height: 3px;
             background: linear-gradient(90deg, transparent, #3b82f6, transparent);
         }
         .control-panel {
             background: rgba(255, 255, 255, 0.05);
-            padding: 20px;
+            padding: clamp(15px, 4vw, 20px);
             border-radius: 15px;
-            margin-bottom: 25px;
+            margin-bottom: 4vh;
             display: flex;
-            justify-content: center;
-            gap: 15px;
+            flex-direction: column;
+            gap: 2vh;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.15);
         }
         .control-panel button {
-            padding: 12px 24px;
+            padding: clamp(10px, 3vw, 12px) clamp(20px, 5vw, 24px);
             border: none;
             border-radius: 10px;
             font-weight: 600;
+            font-size: clamp(0.9rem, 2.5vw, 1rem);
             cursor: pointer;
             position: relative;
             overflow: hidden;
             transition: all 0.4s ease;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+            touch-action: manipulation;
         }
         .control-panel button::before {
             content: '';
@@ -209,51 +213,53 @@
         }
         .bulk-deposit {
             background: rgba(255, 255, 255, 0.05);
-            padding: 20px;
+            padding: clamp(15px, 4vw, 20px);
             border-radius: 15px;
-            margin-bottom: 25px;
+            margin-bottom: 4vh;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.15);
         }
         .bulk-deposit h2 {
             color: #60a5fa;
-            margin-bottom: 15px;
-            font-size: 1.5rem;
+            margin-bottom: 2vh;
+            font-size: clamp(1.2rem, 4vw, 1.5rem);
             font-weight: 600;
         }
         .bulk-deposit .form-group {
             display: flex;
-            gap: 15px;
-            align-items: center;
-            margin-bottom: 15px;
+            flex-direction: column;
+            gap: 2vh;
+            margin-bottom: 2vh;
         }
         .bulk-deposit input {
-            padding: 12px;
+            padding: clamp(10px, 3vw, 12px);
             border: 1px solid #60a5fa;
             border-radius: 10px;
             background: rgba(255, 255, 255, 0.08);
             color: #e0e7ff;
-            font-size: 1rem;
+            font-size: clamp(0.9rem, 2.5vw, 1rem);
             outline: none;
-            flex: 1;
+            width: 100%;
         }
         .bulk-deposit input:focus {
             border-color: #3b82f6;
             box-shadow: 0 0 8px rgba(59, 130, 246, 0.5);
         }
         .bulk-deposit button {
-            padding: 12px 24px;
+            padding: clamp(10px, 3vw, 12px) clamp(20px, 5vw, 24px);
             background: linear-gradient(135deg, #3b82f6, #60a5fa);
             border: none;
             border-radius: 10px;
             color: #fff;
             font-weight: 600;
+            font-size: clamp(0.9rem, 2.5vw, 1rem);
             cursor: pointer;
             position: relative;
             overflow: hidden;
             transition: all 0.4s ease;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+            touch-action: manipulation;
         }
         .bulk-deposit button::before {
             content: '';
@@ -275,44 +281,46 @@
         }
         .search-bar {
             background: rgba(255, 255, 255, 0.05);
-            padding: 20px;
+            padding: clamp(15px, 4vw, 20px);
             border-radius: 15px;
-            margin-bottom: 25px;
+            margin-bottom: 4vh;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.15);
         }
         .search-bar .form-group {
             display: flex;
-            gap: 15px;
-            align-items: center;
+            flex-direction: column;
+            gap: 2vh;
         }
         .search-bar input {
-            padding: 12px;
+            padding: clamp(10px, 3vw, 12px);
             border: 1px solid #60a5fa;
             border-radius: 10px;
             background: rgba(255, 255, 255, 0.08);
             color: #e0e7ff;
-            font-size: 1rem;
+            font-size: clamp(0.9rem, 2.5vw, 1rem);
             outline: none;
-            flex: 1;
+            width: 100%;
         }
         .search-bar input:focus {
             border-color: #3b82f6;
             box-shadow: 0 0 8px rgba(59, 130, 246, 0.5);
         }
         .search-bar button {
-            padding: 12px 24px;
+            padding: clamp(10px, 3vw, 12px) clamp(20px, 5vw, 24px);
             background: linear-gradient(135deg, #3b82f6, #60a5fa);
             border: none;
             border-radius: 10px;
             color: #fff;
             font-weight: 600;
+            font-size: clamp(0.9rem, 2.5vw, 1rem);
             cursor: pointer;
             position: relative;
             overflow: hidden;
             transition: all 0.4s ease;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+            touch-action: manipulation;
         }
         .search-bar button::before {
             content: '';
@@ -334,25 +342,27 @@
         }
         .user-list {
             background: rgba(255, 255, 255, 0.05);
-            padding: 20px;
+            padding: clamp(15px, 4vw, 20px);
             border-radius: 15px;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.15);
+            overflow-x: auto;
         }
         .user-list h2 {
             color: #60a5fa;
-            margin-bottom: 15px;
-            font-size: 1.5rem;
+            margin-bottom: 2vh;
+            font-size: clamp(1.2rem, 4vw, 1.5rem);
             font-weight: 600;
         }
         .user-list table {
             width: 100%;
             border-collapse: collapse;
-            font-size: 0.95rem;
+            font-size: clamp(0.85rem, 2.2vw, 0.95rem);
+            white-space: nowrap;
         }
         .user-list th, .user-list td {
-            padding: 12px;
+            padding: clamp(8px, 2vw, 12px);
             text-align: left;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
@@ -361,19 +371,24 @@
             font-weight: 600;
         }
         .user-list td img {
-            width: 100px;
+            width: clamp(60px, 15vw, 80px);
+            height: auto;
             border-radius: 5px;
             cursor: pointer;
+            object-fit: cover;
+            max-width: 100%;
         }
         .user-list button {
-            padding: 8px 16px;
+            padding: clamp(6px, 2vw, 8px) clamp(12px, 3vw, 16px);
             border: none;
             border-radius: 8px;
             font-weight: 600;
+            font-size: clamp(0.8rem, 2vw, 0.9rem);
             cursor: pointer;
             position: relative;
             overflow: hidden;
             transition: all 0.3s ease;
+            touch-action: manipulation;
         }
         .user-list .approve-btn {
             background: linear-gradient(135deg, #4ade80, #22c55e);
@@ -394,44 +409,61 @@
         .error-message {
             color: #f87171;
             text-align: center;
-            margin-top: 12px;
+            margin-top: 2vh;
             font-weight: 600;
-            font-size: 0.9rem;
+            font-size: clamp(0.8rem, 2.2vw, 0.9rem);
         }
         .success-message {
             color: #4ade80;
             text-align: center;
-            margin-top: 12px;
+            margin-top: 2vh;
             font-weight: 600;
-            font-size: 0.9rem;
+            font-size: clamp(0.8rem, 2.2vw, 0.9rem);
+        }
+        @media (min-width: 769px) {
+            .control-panel {
+                flex-direction: row;
+                justify-content: center;
+            }
+            .bulk-deposit .form-group {
+                flex-direction: row;
+                align-items: center;
+            }
+            .search-bar .form-group {
+                flex-direction: row;
+                align-items: center;
+            }
         }
         @media (max-width: 768px) {
             body {
-                padding: 12px;
-                font-size: 14px;
+                padding: 3vw;
             }
             .login-box {
-                padding: 20px;
-                max-width: 90%;
-            }
-            .control-panel {
-                flex-direction: column;
-                gap: 10px;
-            }
-            .bulk-deposit .form-group {
-                flex-direction: column;
-            }
-            .search-bar .form-group {
-                flex-direction: column;
+                padding: clamp(15px, 4vw, 20px);
+                width: 95%;
             }
             .user-list table {
-                font-size: 0.85rem;
+                font-size: clamp(0.8rem, 2vw, 0.9rem);
             }
             .user-list th, .user-list td {
-                padding: 8px;
+                padding: clamp(6px, 1.5vw, 8px);
+            }
+        }
+        @media (max-width: 480px) {
+            body {
+                font-size: clamp(12px, 2.8vw, 14px);
+            }
+            h1 {
+                font-size: clamp(1.5rem, 5vw, 1.8rem);
+            }
+            .login-box h2 {
+                font-size: clamp(1.2rem, 4vw, 1.5rem);
+            }
+            .bulk-deposit h2, .search-bar h2, .user-list h2 {
+                font-size: clamp(1rem, 3.5vw, 1.2rem);
             }
             .user-list td img {
-                width: 80px;
+                width: clamp(50px, 12vw, 60px);
             }
         }
     </style>
@@ -557,8 +589,8 @@
                         <td>${user.phone || 'N/A'}</td>
                         <td>${user.balance} Ks</td>
                         <td>${user.passport_status}</td>
-                        <td><img src="${user.passport_image || ''}" alt="Passport" onclick="window.open('${user.passport_image || ''}', '_blank')"></td>
-                        <td><img src="${user.selfie_image || ''}" alt="Selfie" onclick="window.open('${user.selfie_image || ''}', '_blank')"></td>
+                        <td><img src="${user.passport_image || 'https://via.placeholder.com/80'}" alt="Passport" onerror="this.src='https://via.placeholder.com/80'" onclick="window.open('${user.passport_image || 'https://via.placeholder.com/80'}', '_blank')"></td>
+                        <td><img src="${user.selfie_image || 'https://via.placeholder.com/80'}" alt="Selfie" onerror="this.src='https://via.placeholder.com/80'" onclick="window.open('${user.selfie_image || 'https://via.placeholder.com/80'}', '_blank')"></td>
                         <td>
                             ${user.passport_status === 'pending' ? `
                                 <button class="approve-btn" onclick="updateStatus('${user.user_id}', 'approved')">Approve</button>
